# honeypot-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
src/: __init__.py  create_tables.py  drop_tables.py  fake_client.py  main.py  pre_start.py  test_main.py
src/api/: deps.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: attack.py
src/core/: __init__.py  config.py  di.py
src/db/: __init__.py  crud.py  di.py  session.py  store_attack.py
src/db/crud/: __init__.py  attack.py  base.py  generate.py  session.py
src/db/models/: __init__.py  attack.py  base.py
src/docker/: base.py  manager.py
src/feature/: README.md  __init__.py  api.py  conpot.py  docker.py  honeyd.py  kippo.py  main.py  real_honeypot.py  snap7.py  startup_events.py  webtrap.py  手动编写类.md
src/feature/base/: __init__.py  docker.py  honeypot.py  lifespan_context.py
src/feature/base/mixin/: __init__.py  base.py  docker.py  main.py
src/feature/conpot/: __init__.py  endpoint.py  model.py  schema.py  source.py  websocket.py
src/feature/honeyd/: __init__.py  crud.py  endpoint.py  model.py  schema.py  source.py  websocket.py
src/feature/kippo/: __init__.py  endpoint.py  model.py  schema.py  source.py
src/feature/real_honeypot/: endpoint.py  model.py  schema.py  source.py
src/feature/utils/: __init__.py  inject_constructor.py  lifespan_scope.py  socket.py  store_attack.py  websocket.py
src/feature/webtrap/: endpoint.py  model.py  schema.py  source.py
src/logger/: __init__.py  di.py
src/schema/: __init__.py  attack.py  attack_stream.py  base.py  socket.py
src/schema/attacks/: alt.py  attack.py
src/sockets/: __init__.py  decoder.py  di.py  manager.py
src/sockets/test/: __init__.py  di.py  fake_manager.py
src/source/: __init__.py  base.py
src/user/: __init__.py  login.py
src/websocket/: __init__.py  buffer.py  manager.py
