[project]
name = "honeypot-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.2",
    "pydantic>=2.4.2",
    "injector>=0.21.0",
    "pydantic-settings>=2.0.3",
    "uvicorn>=0.23.2",
    "fastapi-injector>=0.5.1",
    "websockets>=11.0.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
server = { cmd = "python -m uvicorn src.main:app --host 127.0.0.1 --port 8000", env = { PYTHONPATH = "./src/"} }

[tool.hatch.metadata]
allow-direct-references = true

[[sources]]
name = "default"
url = "https://mirror.baidu.com/pypi/simple"
