[project]
name = "honeypot-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.2",
    "injector>=0.21.0",
    "pydantic-settings>=2.0.3",
    "uvicorn>=0.23.2",
    "websockets>=11.0.3",
    "faker>=19.11.0",
    "pydantic-xml>=2.3.0",
    "loguru>=0.7.2",
    "aioreactive>=0.16.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.28.0",
    "pydantic>=2.4.2",
    "fastapi-injector>=0.5.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore-init-module-imports = true
line-length = 79

[tool.yapf]
based_on_style = "pep8"
arithmetic_precedence_indication = true
coalesce_brackets = true
dedent_closing_brackets = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = false
SPLIT_BEFORE_FIRST_ARGUMENT = true
COLUMN_LIMIT = 79

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.5",
    "yapf>=0.40.2",
    "pre-commit>=3.5.0",
]

[tool.rye.scripts]
server = { cmd = "python -m uvicorn src.main:app --host 127.0.0.1 --port 8000 --lifespan on", env = { PYTHONPATH = "./src/"} }
test-server = { cmd = "python -m uvicorn src.test_main:app --host 127.0.0.1 --port 8000", env = { PYTHONPATH = "./src/"} }
lint = { chain = [ "lint:ruff", "lint:yapf" ] }
"lint:ruff" = "ruff check src --fix"
"lint:yapf" = "yapf -i -r src"

[tool.hatch.metadata]
allow-direct-references = true

# [[tool.rye.sources]]
# name = "default"
# url = "https://mirror.baidu.com/pypi/simple"
