[project]
name = "honeypot-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "termtate", email = "meng360842@gmail.com" }
]
dependencies = [
    "fastapi>=0.103.2",
    "injector>=0.21.0",
    "pydantic-settings>=2.0.3",
    "uvicorn>=0.23.2",
    "websockets>=11.0.3",
    "pydantic-xml>=2.3.0",
    "loguru>=0.7.2",
    "aioreactive>=0.16.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.28.0",
    "pydantic>=2.4.2",
    "fastapi-injector>=0.5.3",
    "sqlmodel>=0.0.16",
    "aiodocker>=0.21.0",
    "httpx>=0.26.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore-init-module-imports = true
line-length = 79

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.5",
    "pre-commit>=3.5.0",
]

[tool.rye.scripts]
server = { cmd = "python -m uvicorn main:app --host 0.0.0.0 --port 8000 --lifespan on", env = { PYTHONPATH = "./src/"} }

create-tables = "python src/create_tables.py"
drop-tables = "python src/drop_tables.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.rye.sources]]
name = "default"
url = "https://mirror.baidu.com/pypi/simple"
